--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -14,7 +15,6 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: auto ;
     align-items: center;
 }
 
@@ -55,8 +55,10 @@ img.background {
 }
 
 .right {
-    padding: 2vw;
+    padding: 4vw;
+    background-color: rgb(237, 245, 238);
     font-size: 1.5rem;
+    max-height: 100vh;
 }
 
 .right .topContainer {
@@ -67,17 +69,35 @@ img.background {
 }
 
 .right .middleContainer {
+    background-color: white;
     --middleContainerHeight: 30vh;
     height: var(--middleContainerHeight);
-    box-shadow: 1px 1px 3px grey;
+    margin-left: -4vw;
+    margin-right: -4vw;
+    box-shadow: 0 4px 4px -4px gray;
+    padding: 1vw 4vw 0;
+}
+
+.formHeader {
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 .right .bottomContainer {
-    height: 100vh - var(var(--topContainerHeight)) - var(--middleContainerHeight);
+    margin-top: 2rem;  
+}
+
+.loginText {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.loginText a {
+    color: #596D48;
 }
 
 .hero {
-    margin-right: 10vw;
+    margin-right: 20vw;
 }
 
 .inputLabelPair {
@@ -98,5 +118,15 @@ input {
     display: flex;
     flex-wrap: wrap;
     gap: 1vw;
-    max-width: 30vw;
+    max-width: 45vw;
+    overflow: auto;
+}
+
+button.signUp {
+    background-color: #596D48;
+    color: white;
+    border-radius: 12px;
+    font-size: 1.2rem;
+    height: 3rem;
+    width: 16rem;
 }
